# OpenAI-RL-spinningup

./: .gitignore  messages.mo  pyproject.toml  readme.md
.cursor/plans/: Modernize SpinningUp Fork-731e41bd.plan.md
.github/workflows/: ci.yml  docs.yml
.specstory/: .project.json
docs/: conf.py
docs/_templates/: layout.html
docs/locales/zh_TW/LC_MESSAGES/: index.po
docs/locales/zh_TW/LC_MESSAGES/algorithms/: ddpg.mo  ddpg.po  ppo.mo  ppo.po  sac.mo  sac.po  td3.mo  td3.po  trpo.mo  trpo.po  vpg.mo  vpg.po
docs/locales/zh_TW/LC_MESSAGES/etc/: acknowledgements.mo  acknowledgements.po  author.mo  author.po
docs/locales/zh_TW/LC_MESSAGES/spinningup/: bench.mo  bench.po  bench_ddpg.mo  bench_ddpg.po  bench_ppo.mo  bench_ppo.po  bench_sac.mo  bench_sac.po  bench_td3.mo  bench_td3.po  bench_vpg.mo  bench_vpg.po  exercise2_1_soln.mo  exercise2_1_soln.po  exercise2_2_soln.mo  exercise2_2_soln.po  exercises.mo  exercises.po  extra_pg_proof1.mo  extra_pg_proof1.po  extra_pg_proof2.mo  extra_pg_proof2.po  extra_tf_pg_implementation.mo  extra_tf_pg_implementation.po  keypapers.mo  keypapers.po  rl_intro.mo  rl_intro.po  rl_intro2.mo  rl_intro2.po  rl_intro3.mo  rl_intro3.po  rl_intro4.mo  rl_intro4.po  spinningup.mo  spinningup.po
docs/user/: installation.rst
spinup/: __init__.py  user_config.py
spinup/algos/pytorch/ddpg/: ddpg.py
spinup/algos/pytorch/ppo/: ppo.py
spinup/algos/pytorch/sac/: sac.py
spinup/algos/pytorch/td3/: td3.py
spinup/algos/pytorch/vpg/: vpg.py
spinup/utils/: logx.py  test_policy.py
test/: test_ppo.py
(+20 files in other folders)
